--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -336,6 +336,7 @@ CONFIG_FINGERPRINT_FPC=y
 CONFIG_FINGERPRINT_GOODIX_FOD=y
 CONFIG_FINGERPRINT_SILEAD=y
 # CONFIG_VT is not set
+CONFIG_MORO_SOUND=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 CONFIG_SERIAL_MSM_GENI=y
